# rs-promethee-core

./: Cargo.toml
benches/: bench.rs
src/: alternatives.rs  bench.rs  generalized_criterion.rs  lib.rs  parse.rs
tests/: test_excel.rs
tests/files/: .~lock.test_correct.xlsx#  test_correct.xlsx
