[package]
name = "rs_promethee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_promethee"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/bench.rs"

[dependencies]
csv = "1.3.0"
itertools = "0.12.0"
rand = "0.8.5"
