[package]
name = "rs_promethee_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_promethee_core"
path = "src/lib.rs"

[features]
parse = ["dep:calamine"]

# [[bin]]
# name = "benchmark"
# path = "benches/bench.rs"

[dependencies]
calamine = { version = "0.26.1", optional = true}
csv = "1.3.0"
itertools = "0.12.0"


[dev-dependencies]
calamine = { version = "0.26.1"}

