[package]
name = "rs_promethee_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs_promethee_core"
path = "src/lib.rs"

# [[bin]]
# name = "benchmark"
# path = "benches/bench.rs"

[dependencies]
calamine = "0.26.1"
itertools = "0.12.0"
rand = "^0.9.0"
tabled = "0.18.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
